--- a/quickshell/matugen/templates/kitty.conf
+++ b/quickshell/matugen/templates/kitty.conf
@@ -7,19 +7,19 @@ selection_foreground  {{colors.on_secondary.default.hex}}
 selection_background  {{colors.secondary_fixed_dim.default.hex}}
 url_color             {{colors.primary.default.hex}}
 
-color0   {{dank16.color0.hex}}
-color1   {{dank16.color1.hex}}
-color2   {{dank16.color2.hex}}
-color3   {{dank16.color3.hex}}
-color4   {{dank16.color4.hex}}
-color5   {{dank16.color5.hex}}
-color6   {{dank16.color6.hex}}
-color7   {{dank16.color7.hex}}
-color8   {{dank16.color8.hex}}
-color9   {{dank16.color9.hex}}
-color10  {{dank16.color10.hex}}
-color11  {{dank16.color11.hex}}
-color12  {{dank16.color12.hex}}
-color13  {{dank16.color13.hex}}
-color14  {{dank16.color14.hex}}
-color15  {{dank16.color15.hex}}
+color0   {{dank16.color0.default.hex}}
+color1   {{dank16.color1.default.hex}}
+color2   {{dank16.color2.default.hex}}
+color3   {{dank16.color3.default.hex}}
+color4   {{dank16.color4.default.hex}}
+color5   {{dank16.color5.default.hex}}
+color6   {{dank16.color6.default.hex}}
+color7   {{dank16.color7.default.hex}}
+color8   {{dank16.color8.default.hex}}
+color9   {{dank16.color9.default.hex}}
+color10  {{dank16.color10.default.hex}}
+color11  {{dank16.color11.default.hex}}
+color12  {{dank16.color12.default.hex}}
+color13  {{dank16.color13.default.hex}}
+color14  {{dank16.color14.default.hex}}
+color15  {{dank16.color15.default.hex}}
