--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -8,9 +8,19 @@
 monitor = , preferred,auto,auto
 
 # ==================
+# ENVIRONMENT VARS
+# ==================
+env = QT_QPA_PLATFORM,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = QT_QPA_PLATFORMTHEME,gtk3
+env = QT_QPA_PLATFORMTHEME_QT6,gtk3
+env = TERMINAL,{{TERMINAL_COMMAND}}
+
+# ==================
 # STARTUP APPS
 # ==================
 exec-once = bash -c "wl-paste --watch cliphist store &"
+exec-once = dms run
 
 # ==================
 # INPUT CONFIG
@@ -126,7 +136,7 @@ layerrule = noanim, ^(quickshell)$
 $mod = SUPER
 
 # === Application Launchers ===
-bind = $mod, T, exec, $TERMINAL
+bind = $mod, T, exec, {{TERMINAL_COMMAND}}
 bind = $mod, space, exec, dms ipc call spotlight toggle
 bind = $mod, V, exec, dms ipc call clipboard toggle
 bind = $mod, M, exec, dms ipc call processlist focusOrToggle
