--- a/core/internal/config/embedded/hyprland.conf
+++ b/core/internal/config/embedded/hyprland.conf
@@ -10,6 +10,8 @@ monitor = , preferred,auto,auto
 # ==================
 # STARTUP APPS
 # ==================
+exec-once = dbus-update-activation-environment --systemd --all
+exec-once = systemctl --user start hyprland-session.target
 exec-once = bash -c "wl-paste --watch cliphist store &"
 
 # ==================
@@ -126,7 +128,7 @@ layerrule = noanim, ^(quickshell)$
 $mod = SUPER
 
 # === Application Launchers ===
-bind = $mod, T, exec, $TERMINAL
+bind = $mod, T, exec, {{TERMINAL_COMMAND}}
 bind = $mod, space, exec, dms ipc call spotlight toggle
 bind = $mod, V, exec, dms ipc call clipboard toggle
 bind = $mod, M, exec, dms ipc call processlist focusOrToggle
